# eng-de-dados

./: .gitignore  404.html  index.html  pyproject.toml  sitemap.xml  spark_session.py
delta/: index.html
iceberg/: index.html
notebooks/: demo.ipynb
notebooks/warehouse/delta/people/: .part-00000-4448b6a7-4050-43c7-8c9f-1eeb3a1eb3ee-c000.snappy.parquet.crc  .part-00005-c122b2fe-1d78-4b6e-a45d-69662592fc8e-c000.snappy.parquet.crc  .part-00011-2d68a80c-ff1f-46b1-bdd7-7d8a63cdb8d8-c000.snappy.parquet.crc  part-00000-4448b6a7-4050-43c7-8c9f-1eeb3a1eb3ee-c000.snappy.parquet  part-00005-0a6d0dd9-e588-4c9e-b0c2-e7e2a12f380a-c000.snappy.parquet  part-00011-b8724b9f-3f7e-47ec-a4aa-eff2c8e1f629-c000.snappy.parquet
notebooks/warehouse/delta/people/_delta_log/: .00000000000000000000.crc.crc  .00000000000000000000.json.crc  .00000000000000000001.crc.crc  .00000000000000000001.json.crc
search/: search_index.json
spark/: index.html
